--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 {
-    "host":"drive"
+    "host":"https://1430700737286241.cn-shanghai.fc.aliyuncs.com/2016-08-15/proxy/guide-hello_world/oneindex/"
 }
